RESOLVED FIXED 46334
REGRESSION (r61285): Microsoft Entourage 2008 does not invoke My Day window
https://bugs.webkit.org/show_bug.cgi?id=46334
Summary REGRESSION (r61285): Microsoft Entourage 2008 does not invoke My Day window
Andy Estes
Reported 2010-09-22 20:00:27 PDT
When running Microsoft Entourage 2008 against a ToT version of WebKit.framework, the 'My Day' window does not appear when clicking the 'My Day' button. This regressed in r61285. <rdar://problem/8301437>
Attachments
Patch (5.01 KB, patch)
2010-09-22 21:51 PDT, Andy Estes
darin: review+
Andy Estes
Comment 1 2010-09-22 21:51:22 PDT
Andy Estes
Comment 2 2010-09-23 12:15:15 PDT
Note You need to log in before you can comment on or make changes to this bug.