2010-09-22  Andy Estes  <aestes@apple.com>

Reviewed by Darin Adler.

        REGRESSION (r61285): Microsoft Entourage 2008 does not invoke My Day window
        https://bugs.webkit.org/show_bug.cgi?id=46334

        Microsoft My Day loads scripts using self-closing script tags, markup
        which is incompatible with the HTML5 parser. Enable parser quirks for
        this application.

        * WebView/WebView.mm:
        (shouldUsePreHTML5ParserQuirks): Return true if the application is
        Microsoft My Day and was linked against a version of WebKit prior to the
        introduction of the HTML5 parser.
2010-09-23  Renata Hodovan  <reni@inf.u-szeged.hu>

        Reviewed by Dirk Schulze.

        SVGFEMorphologyElement doesn't support dynamic invalidation, when attributes change.
        https://bugs.webkit.org/show_bug.cgi?id=46363
        The patch also implements the simple setRadius method.

        Tests: svg/dynamic-updates/SVGFEMorphologyElement-dom-in-attr.html
               svg/dynamic-updates/SVGFEMorphologyElement-dom-operator-attr.html
               svg/dynamic-updates/SVGFEMorphologyElement-dom-radius-attr.html
               svg/dynamic-updates/SVGFEMorphologyElement-svgdom-in-prop.html
               svg/dynamic-updates/SVGFEMorphologyElement-svgdom-operator-prop.html
               svg/dynamic-updates/SVGFEMorphologyElement-svgdom-radius-call.html

        * svg/SVGFEMorphologyElement.cpp:
        (WebCore::SVGFEMorphologyElement::setRadius):
        (WebCore::SVGFEMorphologyElement::svgAttributeChanged):
        * svg/SVGFEMorphologyElement.h:


Canonical link: https://commits.webkit.org/58874@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@68175 268f45cc-cd09-0410-ab3c-d52691b4dbfc